# Surya_Chandra_PDF_OCR

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  _source_filename_map.csv  geometry_alignment_improvement_plan.md  run_basic_gui.cmd  run_gui.bat  run_gui_app.bat  run_gui_detailed.bat  run_uniscan.cmd  unified_pdf_tool.py
.claude/: settings.local.json
.omc/state/: hud-stdin-cache.json
OCRmypdf_plugins/OCRmypdf_plugins/OCRmyPDF-PaddleOCR-main/: Dockerfile  README.md  pyproject.toml
OCRmypdf_plugins/OCRmypdf_plugins/OCRmyPDF-PaddleOCR-main/.forgejo/workflows/: build.yaml  test.yaml
OCRmypdf_plugins/OCRmypdf_plugins/OCRmyPDF-PaddleOCR-main/.github/workflows/: test.yaml
OCRmypdf_plugins/OCRmypdf_plugins/OCRmyPDF-PaddleOCR-main/ocrmypdf_paddleocr/: __init__.py  _detection.py  _hocr.py  _paddle_types.py
OCRmypdf_plugins/OCRmypdf_plugins/OCRmyPDF-PaddleOCR-main/tests/: conftest.py  test_basic.py  test_text.py
OCRmypdf_plugins/OCRmypdf_plugins/Ocrmypdf+surya/: converter_surya_hocr.py  ocrmypdf_with_surya.py
OCRmypdf_plugins/OCRmypdf_plugins/ocrmypdf-doctr-master/: AGENTS.md  README.md  flake.nix  pyproject.toml
OCRmypdf_plugins/OCRmypdf_plugins/ocrmypdf-doctr-master/src/ocrmypdf_doctr/: __init__.py  plugin.py
OCRmypdf_plugins/OCRmypdf_plugins/ocrmypdf-doctr-master/test_pdfs/: 0301_doctr_ocr.txt
OCRmypdf_plugins/ocrmypdf-chandra-main/: README.md  pyproject.toml
OCRmypdf_plugins/ocrmypdf-chandra-main/ocrmypdf_chandra/: __init__.py  hocr.py  plugin.py
docs/: gui_modes_finalization_2026-04-16.md  hybrid_geometry_improvement_plan_2026-04-16.md  ocr_benchmark_plan.md  ocr_env_strategy.md  ocr_runtime_inventory_2026-04-16.md  ocr_searchable_pdf_execution_plan.md  searchable_pdf_strategy.md  unification_plan.md
docs/benchmark_runs/: 2026-03-26_ocr_full_all_20260326.md  2026-03-30_quality_ranking_obs_docs.md  2026-03-30_reusable_txt_artifacts.md  2026-04-13_chandra_geometry_compare_path.md
scripts/: benchmark_ocr_matrix.ps1  bootstrap_new_pc.ps1  compare_chandra_geometry_variants.ps1  compare_ocr_results.py  full_hybrid_geometry_eval.ps1  install_local_ocrmypdf_plugins.ps1
src/uniscan/: __main__.py  cli.py
src/uniscan/app/: __init__.py  ocr_pipeline.py  page_spec.py
src/uniscan/core/: __init__.py  geometry.py  (+3 more)
tests/: test_app_searchable_pdf.py  test_camera_health.py  test_capture_session.py  test_crop_benchmark.py  test_exporters.py  test_ocr_artifact_searchable.py  test_ocr_benchmark.py  test_ocr_canonical.py  test_ocr_engine.py  test_page_store.py  test_pipeline.py  test_scanner_adapter.py  test_web_service.py
(+23 files in other folders)
